--- a/crates/notification-crud/Cargo.toml
+++ b/crates/notification-crud/Cargo.toml
@@ -4,7 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+aws-config = "1.6.1"
+aws-sdk-dynamodb = "1.71.0"
+chrono = "0.4.40"
 
 lambda_runtime = "0.13.0"
 serde = "1"
 tokio = { version = "1", features = ["macros"] }
+uuid = { version = "1.16.0", features = ["v4"] }
