--- a/crates/x-46ki75-notification-lib/Cargo.toml
+++ b/crates/x-46ki75-notification-lib/Cargo.toml
@@ -5,4 +5,5 @@ edition = "2024"
 authors = ["Chomolungma Shirayuki"]
 
 [dependencies]
+async-trait = "0.1.88"
 serde = { version = "1.0.219", features = ["derive"] }
