feat(notification-crud): add aws-sdk-lambda dependency and update function_handler to return NotificationResult

--- a/crates/notification-crud/Cargo.toml
+++ b/crates/notification-crud/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 aws-config = "1.6.1"
 aws-sdk-dynamodb = "1.71.0"
+aws-sdk-lambda = "1.75.0"
 chrono = "0.4.40"
 
 lambda_runtime = "0.13.0"
