--- a/crates/notification-crud/Cargo.toml
+++ b/crates/notification-crud/Cargo.toml
@@ -11,5 +11,6 @@ chrono = "0.4.40"
 
 lambda_runtime = "0.13.0"
 serde = "1"
+serde_json = "1.0.140"
 tokio = { version = "1", features = ["macros"] }
 uuid = { version = "1.16.0", features = ["v4"] }
