--- a/crates/notification-crud/Cargo.toml
+++ b/crates/notification-crud/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "notification-crud"
+name = "x-46ki75-notification-lib"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [dependencies]
 aws-config = "1.6.1"
@@ -14,3 +14,10 @@ serde = "1"
 serde_json = "1.0.140"
 tokio = { version = "1", features = ["macros"] }
 uuid = { version = "1.16.0", features = ["v4"] }
+
+[lib]
+path = "src/lib.rs"
+
+[[bin]]
+name = "notification-crud"
+path = "src/main.rs"
