--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -44,6 +44,7 @@
     // Rust
     "ghcr.io/devcontainers/features/rust": {},
     "./features/cargo-toolkit": {},
+    "ghcr.io/devcontainers-extra/features/zig": {},
 
     // Terraform
     "ghcr.io/devcontainers/features/terraform": {}
